--- a/package.json
+++ b/package.json
@@ -1,29 +1,39 @@
 {
   "name": "sparx-ui",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "private": false,
   "description": "A react library developed with dumi",
+  "keywords": [
+    "React",
+    "dumi",
+    "sparx-ui",
+    "sparx",
+    "ui"
+  ],
+  "homepage": "https://github.com/yukiyukixing/sparx-ui",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yukiyukixing/sparx-ui.git"
+  },
+  "license": "MIT",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "start": "npm run dev",
-    "dev": "dumi dev",
     "build": "father build",
     "build:watch": "father dev",
+    "dev": "dumi dev",
     "docs:build": "dumi build",
-    "prepare": "husky install && dumi setup",
     "doctor": "father doctor",
     "lint": "npm run lint:es && npm run lint:css",
     "lint:css": "stylelint \"{src,test}/**/*.{css,less}\"",
     "lint:es": "eslint \"{src,test}/**/*.{js,jsx,ts,tsx}\"",
-    "prepublishOnly": "father doctor && npm run build"
+    "prepare": "husky install && dumi setup",
+    "prepublishOnly": "father doctor && npm run build",
+    "start": "npm run dev"
   },
-  "authors": [
-    "imxkhm@gmail.com"
-  ],
-  "license": "MIT",
-  "files": [
-    "dist"
-  ],
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
@@ -46,13 +56,6 @@
       "prettier --parser=typescript --write"
     ]
   },
-  "publishConfig": {
-    "access": "public"
-  },
-  "peerDependencies": {
-    "react": ">=16.9.0",
-    "react-dom": ">=16.9.0"
-  },
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
@@ -70,5 +73,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "stylelint": "^15.8.0"
-  }
+  },
+  "peerDependencies": {
+    "react": ">=16.9.0",
+    "react-dom": ">=16.9.0"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "authors": [
+    "imxkhm@gmail.com"
+  ]
 }
